
CREATE TABLE author (
author_id SERIAL PRIMARY KEY ,
name character varying(50) NOT NULL
);

CREATE TABLE author_book (
author_id int not null references author(author_id),
book_id int not null references book (book_id)
);


CREATE TABLE book (
book_id  SERIAL PRIMARY KEY ,
title character varying(255) NOT NULL,
language character varying(255) NOT NULL,
year_published integer,
pages integer,
CONSTRAINT book_pages_check CHECK ((pages > 0))
);

CREATE TABLE book_copy (
book_copy_id SERIAL PRIMARY KEY ,
book_id int not null references book (book_id) ,
copy_number character varying(255) NOT NULL
);

CREATE TABLE book_genres (
book_id int not null references book (book_id) ,
genre_id int not null references genre(genre_id)
);

CREATE TABLE checkout (
checkout_id SERIAL PRIMARY KEY ,
book_copy_id int not null references  book_copy(book_copy_id),
patron_id int not null references patron(patron_id) ,
tart_time timestamp without time zone DEFAULT CURRENT_TIMESTAMP NOT NULL,
end_time timestamp without time zone,
is_borrowing boolean
);


CREATE TABLE public.debtors (
patron_id int not null references patron(patron_id),
book_id int not null references book (book_id) ,
due_date timestamp without time zone
);

CREATE TABLE genre (
genre_id SERIAL PRIMARY KEY ,
name character varying(100) NOT NULL
);

CREATE TABLE notification (
notification_id SERIAL PRIMARY KEY ,
patron_id int not null references patron(patron_id),
contents text NOT NULL
);

CREATE TABLE patron (
patron_id SERIAL PRIMARY KEY ,
first_name character varying(50) NOT NULL,
last_name character varying(50) NOT NULL,
email character varying(100) NOT NULL,
phone_number character varying(50)
);

CREATE TABLE waitlist (
waitlist_id  SERIAL PRIMARY KEY ,
patron_id int not null references patron(patron_id) ,
book_id int not null references book (book_id)
);

INSERT INTO ( name)
VALUES ('Чак Поланік '),
       ('Сіжань Джей Джао'),
       ('Медлін Міллер'),
       ('В. Домонтович');

INSERT INTO (book_id, title, language, year_published, pages)
    VALUES ('Залізна Вдова'	,'Українська',	2024 ,446),
           ('Цирцея'	,'Українська',	2024 ,399),
           ('Доктор Серафікус',	'Українська',	2024,	315),
           ('Бійцівський Клуб', 	'Українська'	,1996	,318);

--Продовження INSERT INTO буде вже в Lab3 , бо ми так і не зрозуміли чи це 2 лаба чи 3 лаба